# CLIOPT

./: Dockerfile  README.md  re.sh
c/: Dockerfile  Makefile
c/include/: cli_bin.h  cli_cgetopt.h  cli_cmd.h  cli_generic.h  cli_init.h  cli_libasm.h  cli_parser.h  cli_readline.h  cliopt.h  cmd_desc_generator.h  cmd_type_enum.h  common_header.h  generic.h  plugins.h
c/include/cliopt/: generic.h  init.h  nstd.h  parser.h
c/src/: main.c
c/src/cgetopt/: alloc_str_arr.c  cgetopt.c  count_str_array.c  fill_bool_arr.c  flag_parser.c  flag_state.c  free_opt.c  init_getopt.c  queue.c  stack.c
c/src/cli_opt/: cli_opt.c
c/src/cliopt/cgetopt/: cgetopt_api.c
c/src/cliopt/cli_opt/: cli_opt.c
c/src/cliopt/readline/: my_readline.c
c/src/cliopt/tokenizer/: count_cmd.c  tokenizer.c
c/src/cmd/: cmd.c
c/src/core/cgetopt/: cgetopt.c  cgetopt_api.c
c/src/core/cli_opt/: cli_opt.c
c/src/core/readline/: my_readline.c
c/src/non_standard_fn/: my_ctoi.c
c/src/plugin/cmd/: cmd.c  cmd.h
c/src/plugin/env/: env.c  env.h
c/src/plugin/example_cmd/: example.c  example.h
c/src/plugin/help/: help.c  help.h
c/src/plugins/addon/env/: env.h
c/src/plugins/addon/example_cmd/: example.c  example.h
c/src/plugins/core/cmd/: cmd.c  cmd.h
c/src/tokenizer/: count_cmd.c
cpp/: CMakeLists.txt  Makefile
cpp/include/: my_cmd.hpp
cpp/src/my_cmd/: my_cmd.cpp
include/: cliopt.h  commands_def.h
include/cliopt/: cgetopt.h  cmd_type_enum.h  init.h  libasm.h  readline.h
src/cliopt/cgetopt/: cgetopt.c  cgetopt_api.c
src/cliopt/cli_opt/: cli_opt.c
src/plugins/addon/env/: env.c
src/plugins/core/help/: help.h
(+2 files in other folders)
